normal pass bug #45062

Closed
opened 2015-06-13 16:33:36 +02:00 by Alexey · 14 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
1.png
2.png
3.png
Exact steps for others to reproduce the error
normal pass.blend
open, render - we will not see difference betweel inside and outside normals

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![1.png](https://archive.blender.org/developer/F190927/1.png) ![2.png](https://archive.blender.org/developer/F190929/2.png) ![3.png](https://archive.blender.org/developer/F190931/3.png) **Exact steps for others to reproduce the error** [normal pass.blend](https://archive.blender.org/developer/F190933/normal_pass.blend) open, render - we will not see difference betweel inside and outside normals
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscribers: @Sergey, @ideasman42, @mont29

Added subscribers: @Sergey, @ideasman42, @mont29

Looks like render is systematically double-sided (in both BI and Cycles)… UI tip of 'double sided' option in Normals panel of Mesh properties implies that it affects 3DView (OpenGL) and rendering, which is obviously not the case.

@Sergey, @ideasman42, do you know whether being always double-sided in rendering is expected behavior (in which case we just have to fix the tooltip, much simpler :P )?

Looks like render is systematically double-sided (in both BI and Cycles)… UI tip of 'double sided' option in Normals panel of Mesh properties implies that it affects 3DView (OpenGL) **and** rendering, which is obviously not the case. @Sergey, @ideasman42, do you know whether being always double-sided in rendering is expected behavior (in which case we just have to fix the tooltip, much simpler :P )?

@mont29, BI was never checking for ME_TWOSIDED flag as far as i can see up to 2.42 versions. So think changing tooltip is safest idea here, because otherwise it'll just break quite some setups.

@mont29, BI was never checking for `ME_TWOSIDED` flag as far as i can see up to 2.42 versions. So think changing tooltip is safest idea here, because otherwise it'll just break quite some setups.

This issue was referenced by 4835fe06f1

This issue was referenced by 4835fe06f1f7501440d21a3e3586f591049b1d99

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@Inwader77 So, thanks for the report, but no bug here really, render engines have always been rendering in 'double sided' mode (i.e. they behave as if faces always had both inward and outward normals).

@Inwader77 So, thanks for the report, but no bug here really, render engines have always been rendering in 'double sided' mode (i.e. they behave as if faces always had both inward and outward normals).
Author

In #45062#315408, @mont29 wrote:
@Inwader77 So, thanks for the report, but no bug here really, render engines have always been rendering in 'double sided' mode (i.e. they behave as if faces always had both inward and outward normals).

Ok, how i can work with front/back side of face? we have not this function nowhere. How i can cut backface in render(like in 3d view)?

> In #45062#315408, @mont29 wrote: > @Inwader77 So, thanks for the report, but no bug here really, render engines have always been rendering in 'double sided' mode (i.e. they behave as if faces always had both inward and outward normals). Ok, how i can work with front/back side of face? we have not this function nowhere. How i can cut backface in render(like in 3d view)?

Think this simply not possible.

Think this simply not possible.
Author

In #45062#315442, @mont29 wrote:
Think this simply not possible.

We must add this function, because if we create this сut sphere, create plane, bake norm map
norm map.png
use this norm map for plane
render and look on normal pass - we will see proper result
untitled.png
blender can distinguishes inward and outward sides

> In #45062#315442, @mont29 wrote: > Think this simply not possible. We must add this function, because if we create this сut sphere, create plane, bake norm map ![norm map.png](https://archive.blender.org/developer/F206968/norm_map.png) use this norm map for plane render and look on normal pass - we will see proper result ![untitled.png](https://archive.blender.org/developer/F206970/untitled.png) blender can distinguishes inward and outward sides

Improvements are always possible, but they're happening outside of the bug tracker.

Improvements are always possible, but they're happening outside of the bug tracker.
Author

In #45062#322769, @Sergey wrote:
Improvements are always possible, but they're happening outside of the bug tracker.

Ok, where can I do it

> In #45062#322769, @Sergey wrote: > Improvements are always possible, but they're happening outside of the bug tracker. Ok, where can I do it
Author

In #45062#322769, @Sergey wrote:
Improvements are always possible, but they're happening outside of the bug tracker.

n.png

> In #45062#322769, @Sergey wrote: > Improvements are always possible, but they're happening outside of the bug tracker. ![n.png](https://archive.blender.org/developer/F212707/n.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45062
No description provided.