Fix T45062: Make it clear in tooltip that 'double sided' mesh option only affects OpenGL (viewport), and not render engines.